--- a/client/src/containers/styles/main.scss
+++ b/client/src/containers/styles/main.scss
@@ -55,6 +55,10 @@ a, a:active, a:visited {
   text-decoration: none;
 }
 
+a > img {
+  width: 100%;
+}
+
 .bubble{
   background-color: #F2F2F2;
   border-radius: 5px;
